src/test/ui/privacy/private-in-public-non-principal-2.stderr
error: type `(dyn m::PubPrincipal + m::PrivNonPrincipal + 'static)` is private
  --> $DIR/private-in-public-non-principal-2.rs:11:5
   |
LL |     m::leak_dyn_nonprincipal();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

